# onsense

./: .gitignore  LICENSE  PROTOCOL.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  server.json
docs/: index.html  privacy.html
onsense/: __init__.py  __main__.py  auth.py  cli.py  clip.py  crypto.py  doctor.py  metrics.py  pair.py  server.py
onsense/commands/: onsense.md
tests/: test_auth.py  test_crypto.py  test_metrics.py  test_pair_no_cli.py  test_pair_port_fallback.py  test_security_hardening.py  test_token_priority.py
